<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/tv_mall_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tv_mall_name"
        android:layout_alignParentTop="true"
        android:layout_marginTop="44dp"
        android:text="@string/first_name" />

    <TextView
        android:id="@+id/tv_mall_phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/tv_mall_desc"
        android:layout_alignLeft="@+id/tv_mall_desc"
        android:layout_marginBottom="62dp"
        android:text="@string/Email" />

    <TextView
        android:id="@+id/tv_mall_desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/bt_addmall"
        android:layout_alignLeft="@+id/bt_addmall"
        android:layout_marginBottom="57dp"
        android:text="@string/phone_number" />

    <TextView
        android:id="@+id/tv_mall_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tv_mall_phone"
        android:layout_below="@+id/tv_mall_location"
        android:layout_marginTop="43dp"
        android:text="@string/last_name" />
    
    <Button
        android:id="@+id/bt_addmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="32dp"
        android:onClick="updateContact"
        android:text="Update Record" />

    <TextView
        android:id="@+id/text_PostTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="15dp"
        android:text="Update Record" />

    <EditText
        android:id="@+id/editText_fname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/tv_mall_location"
        android:layout_alignBottom="@+id/tv_mall_location"
        android:layout_toRightOf="@+id/tv_mall_desc"
        android:ems="10"
        android:hint="@string/hint_fname" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/editText_last_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/tv_mall_name"
        android:layout_alignLeft="@+id/editText_fname"
        android:ems="10"
        android:hint="@string/hint_last_name" />

    <EditText
        android:id="@+id/editText_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/tv_mall_phone"
        android:layout_alignBottom="@+id/tv_mall_phone"
        android:layout_alignLeft="@+id/editText_last_name"
        android:layout_alignRight="@+id/editText_last_name"
        android:ems="10"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/editText_phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/tv_mall_desc"
        android:layout_toRightOf="@+id/text_PostTitle"
        android:ems="10"
        android:inputType="phone" />

</RelativeLayout>